[package]
name = "rust_chat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
src = "src/server.rs"
path = "src/server.rs"

[[bin]]
name = "client"
src = "src/client.rs"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = { version = "5.101.0" }
time = "0.1"
